--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
         <a class="store-button" href="https://apps.apple.com/fr/app/basket-battle/id1622000953" target="_blank">Get it on App Store</a>
         <a class="store-button" href="https://play.google.com/store/apps/details?id=com.noorgames.basketbattle" target="_blank">Download from Play Store</a>
     </div>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/65acf7188d261e1b5f561003/1hklqaehc';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 </body>
 </html>
