--- a/moderator-application.html
+++ b/moderator-application.html
@@ -100,6 +100,19 @@
     <div class="google-form-container">
         <iframe class="google-form-iframe" src="https://docs.google.com/forms/d/e/1FAIpQLSfWY6eDLAf87vQI5ZLQCrpVzy8FxPfg1_Pzy_xoUNAo8_1fyQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6576e0b570c9f2407f7e8003/1hhc5rh37';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 </body>
 </html>
